# bridgy

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
bridgy/: __init__.py  __main__.py  bridgy.py  config.py  main.py  ssh.py  sshfs.py  tmux.py  utils.py  version.py
bridgy/command/: __init__.py  ansible_utils.py  base.py  run.py  run_ansible.py  ssh.py  sshfs.py
bridgy/config/: __init__.py  base.py  v1.py  v2.py
bridgy/config/samples/: sample_config_1.yml  sample_config_2.yml
bridgy/inventory/: __init__.py  aws.py  flatfile.py  newrelic.py  source.py
src/bridgy/: bridgy.py  command.py  config.py  tmux.py  utils.py  version.py
src/bridgy/command/: __init__.py  base.py  error.py  ssh.py  sshfs.py
src/bridgy/inventory/: __init__.py  aws.py  flatfile.py  newrelic.py  source.py
tests/: test_aws.py  test_config.py  test_csv.py  test_inventory.py  test_inventory_set.py  test_newrelic.py  test_run.py  test_run_ansible.py  test_ssh.py  test_sshfs.py  test_tmux.py
tests/aws_configs/: config  credentials
tests/aws_stubs/: ec2.DescribeInstances_1.json
