[tool.poetry]
name = "bridgy"
version = "0.3.0"
description = "Easily search your cloud inventory and integrate with ssh + tmux + sshfs"
authors = ["Alex Goodman <wagoodman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
PyYAML = "^5.1"
fuzzywuzzy = "^0.17.0"
coloredlogs = "^10.0"
placebo = "^0.9.0"
ansible = "^2.7"
boto3 = "^1.9"
blessings = "^1.7"
inquirer = "^2.5"
requests = "^2.21"
docopt = "^0.6.2"
tabulate = "^0.8.3"
cryptography = "^2.6"
paramiko = "^2.4"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
tox = "^3.8"
pytest = "^4.4"
pytest-mock = "^1.10"
mock = "^2.0"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
